<resources>
    <string name="app_name">Pizza Joker</string>
    <string name="btnSignIn">Најави се</string>
    <string name="btnSignUp">Нов корисник</string>
    <string name="fname">Име</string>
    <string name="lname">Презиме</string>
    <string name="mail">Емаил</string>
    <string name="pasw1">Лозинка</string>
    <string name="pasw2">Повтори лозинка</string>
    <string name="already_member">Веќе сте се зачлениле? Најавете се</string>
    <string name="create_acc">Регистрирај се</string>
    <string name="not_a_member">Немате направено регистрација? Регистрирајте се</string>
    <string name="add_cart">Земи</string>
    <string name="log_out">Одјави се</string>
    <string name="menu_str">Мени</string>
    <string name="my_acc">Мој профил</string>
    <string name="fname_err">Внесете име!</string>
    <string name="lname_err">Внесете презиме!</string>
    <string name="email_err">Внесете е-маил!</string>
    <string name="p1_err">Внесете лозинка!</string>
    <string name="p2_err">Внесете ја лозинката уште еднаш!!</string>
    <string name="notmatch_err">Двете лозинки не се совпаѓаат!</string>
    <string name="login_err">Внесете точни податоци!</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="my_order">Моја нарачка</string>
    <string name="naracaj">Нарачај</string>
    <string name="X">X</string>
    <string name="total">Вкупно: </string>
    <string name="mkd"> денари</string>
    <string name="name">Име:</string>
    <string name="lastname">Презиме:</string>
    <string name="editBtn">Промени податоци</string>
    <string name="saveBtn">Зачувај промени</string>
    <string name="radioCash">Плати во готово</string>
    <string name="radioCard">Плати со кредитна картичка</string>
    <string name="finishOrder">Заврши нарачка</string>
    <string name="telnum">Телефонски број(ex:077 777 777/077777777)</string>
</resources>
