<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_menu"
            android:icon="@drawable/ic_store"
            android:title="@string/menu_str"/>


        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_acc"/>

        <item android:id="@+id/nav_order"
              android:icon="@drawable/ic_person_black_24dp"
              android:title="@string/my_order"/>


        <item android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/log_out"/>
    </group>
</menu>