<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.PayActivity"
    android:orientation="vertical"
    android:layout_margin="14dp"

    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/info"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBtnMain"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <TextView
        android:id="@+id/current_address"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:lines="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />



    <RadioGroup
        android:id="@+id/radioPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioCash"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioCard" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
        <EditText android:id="@+id/telNum"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textCapWords"
                  android:hint="@string/telnum" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finishOrder" />

</LinearLayout>
    <com.craftman.cardform.CardForm
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card_form"
        android:visibility="gone"/>

</LinearLayout>