<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"

                tools:context=".UI.MyOrderForm">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
        android:layout_below="@id/toolbar"
        >
        <TextView android:layout_width="match_parent" android:layout_height="20dp"/>
        <android.support.v7.widget.RecyclerView
                android:id="@+id/listCart"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        />
    </LinearLayout>

    <android.support.v7.widget.CardView
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            app:cardBackgroundColor="@color/colorPrimary">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1,000 den"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mkd"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

            </LinearLayout>
            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/placeOrder"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"
                    android:layout_marginBottom="20dp"
                    android:padding="12dp"
                    android:text="@string/naracaj"
                    android:textColor="@android:color/white"
                    android:background="@drawable/custom_styles"
                    android:textStyle="bold"

            />
        </RelativeLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>